--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://secure-garden-42258.herokuapp.com/" data-toggle="tooltip" data-placement="right" title="Visit Website">BUSLO <i class="fas fa-arrow-right"></i></a></div>
             <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="http://stormy-castle-16005.herokuapp.com/" data-toggle="tooltip" data-placement="right" title="Visit Website">YelpCamp &nbsp<i class="fas fa-arrow-right"></i></a></div>
-            <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://github.com/Sakshamkhandelwal123/Online-Prefect" data-toggle="tooltip" data-placement="right" title="View Tool">Online Prefect <i class="fas fa-arrow-right"></i></a></div>
+            <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://sakshamkhandelwal123.github.io/Shop2Earn/" data-toggle="tooltip" data-placement="right" title="View Website">Shop2Earn <i class="fas fa-arrow-right"></i></a></div>
 
         </div>
 
