--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="navigator__box">
 
             <a class="navigation__item" href="#aboutme">About Me</a>
+			<a class="navigation__item" href="#res">Resume</a>
             <a class="navigation__item" href="#projects">Projects</a>
             <a class="navigation__item" href="#exp">Experience</a>
             <a class="navigation__item" href="#contact">Contact Me</a>
@@ -52,6 +53,7 @@
         <div class="sidenavigator__box">
 
             <a class="sidenavigation__item" href="#aboutme">About Me</a>
+			<a class="navigation__item" href="#res">Resume</a>
             <a class="sidenavigation__item" href="#projects">Projects</a>
             <a class="sidenavigation__item" href="#exp">Experience</a>
             <a class="sidenavigation__item" href="#contact">Contact Me</a>
@@ -76,9 +78,23 @@
                 <div class="hugetext bold">Saksham Khandelwal</div>
                 <span class="headertext bold">I </span><span class="headertext bold themetext" id="type"></span>
             </div>
-            <div id="projects"></div>
+            <div id="res"></div>
         </div>
     </div>
+	
+	<div class="github headertext ">
+
+        <div data-aos="fade-down">
+
+            Resume<br>
+
+        <a href="" class="btn btn-primary githubbtn mediumtext">Download Resume
+            <i class="fas fa-external-link-alt"></i> &nbsp</a>
+
+        </div>
+        <div id="projects"></div>
+    </div>
+	
     <div class="projects row" >
 
         <div class="col projectcol projecthead">
@@ -89,7 +105,7 @@
 
             <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://secure-garden-42258.herokuapp.com/" data-toggle="tooltip" data-placement="right" title="Visit Website">BUSLO <i class="fas fa-arrow-right"></i></a></div>
             <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="http://stormy-castle-16005.herokuapp.com/" data-toggle="tooltip" data-placement="right" title="Visit Website">YelpCamp &nbsp<i class="fas fa-arrow-right"></i></a></div>
-            <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://sakshamkhandelwal123.github.io/Shop2Earn/" data-toggle="tooltip" data-placement="right" title="View Website">Shop2Earn <i class="fas fa-arrow-right"></i></a></div>
+            <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i> </span><a href="https://github.com/Sakshamkhandelwal123/Online-Prefect" data-toggle="tooltip" data-placement="right" title="View Tool">Online Prefect <i class="fas fa-arrow-right"></i></a></div>
 
         </div>
 
@@ -197,11 +213,36 @@ Embedded Systems</a>
 			  		<a class="btn btn-primary" type="button" href="./Certificates/Coursera VLASTZBXTUU4.pdf">Introduction to Git and GitHub</a>
 				</div>
 			</div><br>
-
+		<div class="headertext bold text-center" data-aos="fade-down">Internships <span class="contenttext greytext">&#8226; 1 Post</span></div><br>
+			<div class="row">
+				  <div class="col-sm-6 mx-auto">
+					<div class="card text-center text-danger bg-light">
+					  <div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="#" class="btn btn-outline-success">Check My Work</a>
+					  </div>
+					</div>
+				  </div>
+			</div>
         </div>
         <br><br>
     </div>
-
+	<div class="experience">
+		<div class="experience__header hugetext">Blogs</div><br>
+			<div class="experience__skills">
+				<div class="row">
+				  <div class="col-sm-3 mx-3">
+					<div class="card bg-warning text-blue">
+					  <div class="card-body">
+						<h2 class="card-title">Quick Sort Algorithm</h2>
+						<a href="https://sakshamkhandelwal2001.medium.com/quick-sort-algorithm-6e14a412df44" class="btn btn-primary">Visit  <i class="fas fa-location-arrow"></i></a>
+					  </div>
+    				</div>
+				</div>
+  			</div>
+		</div>
+	</div>
     <div class="contactme" id="contact">
 
         <div class="contactme__header hugetext bold">Contact Me</div><br>
