--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<div class="card border-danger text-danger skill contenttext">MySQL</div>
 				<div class="card border-warning skill contenttext">C++</div>
                 <div class="card border-info text-info skill contenttext">Python3</div>
-                <div class="card border-dark text-dark skill contenttext">Java</div>
+                <div class="card border-dark text-dark skill contenttext">AWS</div>
 				<div class="card border-primary text-primary skill contenttext">Git</div>
                 <div class="card border-success text-success skill contenttext">HTML5</div>
                 <div class="card border-danger text-danger skill contenttext">CSS3</div>
@@ -158,6 +158,7 @@
                 <div class="card border-success text-success skill contenttext">ExpressJS</div>
                 <div class="card border-danger text-danger skill contenttext">MongoDB</div>
                 <div class="card border-warning skill contenttext">Javascript</div>
+		    <div class="card border-warning skill contenttext">Data Structures and Algorithm</div>
 
             </div>
             <br><br>
@@ -238,6 +239,13 @@ Embedded Systems</a>
 					  <div class="card-body">
 						<h2 class="card-title">Quick Sort Algorithm</h2>
 						<a href="https://sakshamkhandelwal2001.medium.com/quick-sort-algorithm-6e14a412df44" class="btn btn-primary">Visit  <i class="fas fa-location-arrow"></i></a>
+					  </div>
+    				</div>
+					  <div class="col-sm-3 mx-3">
+					<div class="card bg-warning text-blue">
+					  <div class="card-body">
+						<h2 class="card-title">Bias in Social Networks</h2>
+						<a href="https://sakshamkhandelwal2001.medium.com/bias-in-social-networks-ab2bfc870fe4" class="btn btn-primary">Visit  <i class="fas fa-location-arrow"></i></a>
 					  </div>
     				</div>
 				</div>
