--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             Resume<br>
 
-        <a href="https://drive.google.com/file/d/109uGNtF9tTNaIbgaqAvB5qlx6mltBCDI/view?usp=sharing" class="btn btn-primary githubbtn mediumtext">Download Resume
+        <a href="" class="btn btn-primary githubbtn mediumtext">Download Resume
             <i class="fas fa-external-link-alt"></i> &nbsp</a>
 
         </div>
@@ -234,7 +234,7 @@ Embedded Systems</a>
 		<div class="experience__header hugetext">Blogs</div><br>
 			<div class="experience__skills">
 				<div class="row">
-				  <div class="col-sm-3 mx-3">
+				  <div class="col-sm-4 mx-3">
 					<div class="card bg-warning text-blue">
 					  <div class="card-body">
 						<h2 class="card-title">Quick Sort Algorithm</h2>
