--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             Resume<br>
 
-        <a href="" class="btn btn-primary githubbtn mediumtext">Download Resume
+        <a href="https://drive.google.com/file/d/1mC7JexpOOIMP-x9QhnNfYDja_AWyuSVU/view?usp=sharing" class="btn btn-primary githubbtn mediumtext">Download Resume
             <i class="fas fa-external-link-alt"></i> &nbsp</a>
 
         </div>
