--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       Resume<br>
 
-      <a href="https://drive.google.com/file/d/1Y4Xg1UQKR3E9ec_dcPId1oDFflgre8e2/view?usp=sharing"
+      <a href="https://drive.google.com/file/d/1EGN9AIsqIZgULir_Mg2AqGxE-Ztd_Dei/view?usp=sharing"
         class="btn btn-primary githubbtn mediumtext">Download Resume
         <i class="fas fa-external-link-alt"></i> &nbsp</a>
 
@@ -110,14 +110,14 @@
     <div class="col projectcol projectlist">
 
       <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i>
-        </span><a href="https://github.com/Sakshamkhandelwal123/BUSLO" data-toggle="tooltip" data-placement="right"
-          title="Visit Website">BUSLO <i class="fas fa-arrow-right"></i></a></div>
+        </span><a href="https://github.com/Sakshamkhandelwal123/musik-fusion-backend" data-toggle="tooltip" data-placement="right"
+          title="Visit Website">Musik Fusion <i class="fas fa-arrow-right"></i></a></div>
       <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i>
         </span><a href="https://github.com/Sakshamkhandelwal123/Cricex" data-toggle="tooltip" data-placement="right"
           title="Visit Website">Cricex &nbsp<i class="fas fa-arrow-right"></i></a></div>
       <div class="project contenttext bold" data-aos="fade-down"><span class="tick"><i class="fas fa-check-double"></i>
-        </span><a href="https://github.com/Sakshamkhandelwal123/Online-Prefect" data-toggle="tooltip"
-          data-placement="right" title="View Tool">Online Prefect <i class="fas fa-arrow-right"></i></a></div>
+        </span><a href="https://github.com/Sakshamkhandelwal123/Eagle-AI" data-toggle="tooltip"
+          data-placement="right" title="Visit Website">Eagle AI <i class="fas fa-arrow-right"></i></a></div>
 
     </div>
 
@@ -147,7 +147,7 @@
 
         Hi! I am a <span class="lobster headertext">Full Stack Web Developer And Software Developer</span> based
         in India.
-        I have <span class="headertext bold"><i>2+ Years</i></span> of Coding Experience in numerous stacks of
+        I have <span class="headertext bold"><i>2+ Years</i></span> of Experience in numerous stacks of
         Technology.
         I am a <span class="lobster headertext decortext">Fast Learner, Innovator</span> and am always in a
         quest to learn new tech Stacks.
@@ -156,18 +156,24 @@
       </div>
 
       <div class="headertext bold text-center" data-aos="fade-down">Skills and Tools <span
-          class="contenttext greytext">&#8226; 17 Skills</span></div><br>
+          class="contenttext greytext">&#8226; 28 Skills</span></div><br>
       <div class="skills" data-aos="fade-down">
 
         <div class="card border-primary text-primary skill contenttext">C++</div>
         <div class="card border-success text-success skill contenttext">Python</div>
         <div class="card border-danger text-danger skill contenttext">Javascript</div>
+        <div class="card border-dark text-dark skill contenttext">Typescript</div>
         <div class="card border-warning skill contenttext">SQL</div>
         <div class="card border-info text-info skill contenttext">PostgreSQL</div>
         <div class="card border-dark text-dark skill contenttext">MySQL</div>
         <div class="card border-primary text-primary skill contenttext">MongoDB</div>
         <div class="card border-success text-success skill contenttext">Node JS</div>
+        <div class="card border-info text-info skill contenttext">Nest JS</div>
         <div class="card border-danger text-danger skill contenttext">Express JS</div>
+        <div class="card border-primary text-primary skill contenttext">Flask</div>
+        <div class="card border-success text-success skill contenttext">SqlAlchemy</div>
+        <div class="card border-info text-info skill contenttext">Django</div>
+        <div class="card border-danger text-danger skill contenttext">Sequelize</div>
         <div class="card border-info text-info skill contenttext">React JS</div>
         <div class="card border-dark text-dark skill contenttext">HTML</div>
         <div class="card border-primary text-primary skill contenttext">CSS</div>
@@ -176,8 +182,39 @@
         <div class="card border-warning skill contenttext">AWS</div>
         <div class="card border-info text-info skill contenttext">Redis</div>
         <div class="card border-success text-success skill contenttext">GraphQL</div>
+        <div class="card border-success text-success skill contenttext">Kafka</div>
+        <div class="card border-danger text-danger skill contenttext">Meilisearch</div>
+        <div class="card border-warning skill contenttext">Postman</div>
+        <div class="card border-info text-info skill contenttext">Clickhouse</div>
+        <div class="card border-success text-success skill contenttext">Cloudinary</div>
 
       </div>
+      <br><br>
+
+      <div class="headertext bold text-center" data-aos="fade-down">Experience <span
+          class="contenttext greytext">&#8226; 2 Post</span></div><br>
+      <div class="row">
+        <div class="col-sm-6 mx-auto">
+          <div class="card text-center text-danger bg-light">
+            <div class="card-body">
+              <h5 class="card-title">Software Engineer
+              </h5>
+              <p class="card-text">Glue Labs Private Limited</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 mx-auto">
+          <div class="card text-center text-danger bg-light">
+            <div class="card-body">
+              <h5 class="card-title">Software Engineer Intern
+              </h5>
+              <p class="card-text">Glue Labs Private Limited</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <br><br>
 
       <div class="headertext bold text-center" data-aos="fade-down">Certifications <span
@@ -246,29 +283,6 @@
             and GitHub</a>
         </div>
       </div><br>
-      <div class="headertext bold text-center" data-aos="fade-down">Internships <span
-          class="contenttext greytext">&#8226; 2 Post</span></div><br>
-      <div class="row">
-        <div class="col-sm-6 mx-auto">
-          <div class="card text-center text-danger bg-light">
-            <div class="card-body">
-              <h5 class="card-title">Software Engineer Intern
-              </h5>
-              <p class="card-text">Glue Labs Private Limited</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 mx-auto">
-          <div class="card text-center text-danger bg-light">
-            <div class="card-body">
-              <h5 class="card-title">HTML5 and CSS3 CODING INTERNSHIP
-              </h5>
-              <p class="card-text">Suven Consultants & Technology Pvt. Ltd.</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
     <br><br>
   </div>
@@ -344,7 +358,7 @@
         </script>
         <script>
           var type = new Typed('#type', {
-            strings: ['Design UI/UX', 'Develop Websites', 'Do Coding', 'Innovate Tools'],
+            strings: ['Develop Websites', 'Do Coding', 'Innovate Tools'],
             typeSpeed: 35,
             smartBackspace: false,
             backSpeed: 10,
