Changed experience to career

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       </div>
       <br><br>
 
-      <div class="headertext bold text-center" data-aos="fade-down">Experience <span
+      <div class="headertext bold text-center" data-aos="fade-down">Career <span
           class="contenttext greytext">&#8226; 2 Post</span></div><br>
       <div class="row">
         <div class="col-sm-6 mx-auto">
@@ -284,7 +284,6 @@
         </div>
       </div><br>
     </div>
-    <br><br>
   </div>
   <div class="experience">
     <div class="experience__header hugetext">Blogs</div><br>
